# smf-getting-started-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh  install-deps.sh
recipe/: wellknown.cmake
src/: CMakeLists.txt
src/client/: main.cc
src/server/: main.cc
